# autoware.universe

autoware_launch/launch/: autoware.launch.xml
common/autoware_auto_geometry/: CMakeLists.txt  package.xml
common/autoware_auto_geometry/src/: bounding_box_3d.cpp
common/autoware_auto_perception_rviz_plugin/: package.xml
common/osqp_interface/: CMakeLists.txt
common/perception_utils/: package.xml
common/perception_utils/src/: traffic_light_utils.cpp
common/tensorrt_common/src/: tensorrt_common.cpp
common/tier4_autoware_utils/: CMakeLists.txt  package.xml
common/tier4_calibration_rviz_plugin/: package.xml
common/tier4_vehicle_rviz_plugin/: package.xml
control/engage_transition_manager/config/: engage_transition_manager.param.yaml
control/operation_mode_transition_manager/config/: operation_mode_transition_manager.plotjuggler-config.xml
control/operation_mode_transition_manager/msg/: OperationModeTransitionManagerDebug.msg
control/operation_mode_transition_manager/src/: operation_mode_transition_manager.cpp
control/trajectory_follower/src/: mpc_lateral_controller.cpp  pid_longitudinal_controller.cpp
control/trajectory_follower_nodes/config/: plot_juggler_trajectory_follower.xml
control/trajectory_follower_nodes/src/: controller_node.cpp
control/vehicle_cmd_gate/config/: vehicle_cmd_gate.param.yaml
control/vehicle_cmd_gate/src/: vehicle_cmd_gate.cpp
launch/tier4_control_launch/launch/: control.launch.py
launch/tier4_map_launch/launch/: map.launch.py
launch/tier4_perception_launch/: package.xml
launch/tier4_perception_launch/launch/: perception.launch.xml
localization/gyro_odometer/: package.xml
localization/initial_pose_button_panel/: package.xml
localization/localization_error_monitor/: package.xml
main/: sitemap.xml
map/lanelet2_extension/lib/: query.cpp  utilities.cpp
map/map_loader/: CMakeLists.txt
perception/compare_map_segmentation/src/: compare_elevation_map_filter_node.cpp
perception/crosswalk_traffic_light_estimator/: README.md  package.xml
perception/crosswalk_traffic_light_estimator/src/: node.cpp
perception/detection_by_tracker/src/: detection_by_tracker_core.cpp
perception/lidar_centerpoint/config/: aip_x2.param.yaml
perception/map_based_prediction/src/: map_based_prediction_node.cpp
perception/ml_ops/: CMakeLists.txt  package.xml
perception/multi_object_tracker/: package.xml
perception/multi_object_tracker/src/: multi_object_tracker_core.cpp
perception/object_filter/: CMakeLists.txt  package.xml
perception/object_merger/: CMakeLists.txt  package.xml
perception/object_merger/launch/: object_association_merger.launch.xml
perception/radar_fusion_to_detected_object/config/: radar_object_fusion_to_detected_object.param.yaml
perception/radar_fusion_to_detected_object/include/: radar_fusion_to_detected_object.hpp
perception/radar_fusion_to_detected_object/src/: radar_fusion_to_detected_object.cpp
perception/tensorrt_yolox/src/: tensorrt_yolox.cpp  tensorrt_yolox_node.cpp
perception/traffic_light_arbiter/src/: traffic_light_arbiter.cpp
perception/traffic_light_classifier/: CMakeLists.txt  README.md  package.xml
perception/traffic_light_classifier/src/: cnn_classifier.cpp  (+3 more)
perception/traffic_light_classifier_py/: package.xml  setup.cfg  setup.py
perception/traffic_light_fine_detector/: CMakeLists.txt  README.md  package.xml
perception/traffic_light_fine_detector_py/: package.xml  setup.cfg  setup.py
perception/traffic_light_fine_detector_python/: package.xml  pyproject.toml  setup.cfg  setup.py
perception/traffic_light_fine_detector_python/traffic_light_fine_detector_python/: node.py
perception/traffic_light_fusion_visualizer/: package.xml  setup.cfg  setup.py
perception/traffic_light_map_based_detector/: CMakeLists.txt  package.xml
perception/traffic_light_multi_camera_fusion/: README.md  package.xml
perception/traffic_light_occlusion_predictor/: CMakeLists.txt  package.xml
perception/traffic_light_optical_flow_based_detector/: CMakeLists.txt  README.md  package.xml
perception/traffic_light_optical_flow_based_detector/include/traffic_light_optical_flow_based_detector/: nodelet.hpp
perception/traffic_light_optical_flow_based_detector/launch/: traffic_light_optical_flow_based_detector.launch.xml
perception/traffic_light_optical_flow_based_detector/src/: nodelet.cpp
perception/traffic_light_ssd_fine_detector/: README.md  package.xml
perception/traffic_light_visualization/: CMakeLists.txt  README.md  package.xml
planning/behavior_path_planner/: README.md  package.xml
planning/obstacle_avoidance_planner/: CMakeLists.txt  README.md
planning/obstacle_cruise_planner/: package.xml
planning/planning_validator/: CMakeLists.txt  package.xml
planning/planning_validator/config/: planning_validator.param.yaml
planning/planning_validator/include/planning_validator/: debug_marker.hpp  planning_validator.hpp
planning/planning_validator/launch/: planning_validator.launch.xml
planning/planning_validator/src/: debug_marker.cpp  planning_validator.cpp
planning/static_centerline_optimizer/: CMakeLists.txt  README.md  package.xml
planning/static_centerline_optimizer/config/: path_smoother.param.yaml
planning/static_centerline_optimizer/include/static_centerline_optimizer/: functions.hpp  static_centerline_optimizer_node.hpp  utils.hpp
planning/static_centerline_optimizer/launch/: static_centerline_optimizer.launch.xml
planning/static_centerline_optimizer/scripts/: app.py  optimize_centerline.sh  path_planning.sh  request_load_map.sh
planning/static_centerline_optimizer/scripts/tmp/: lanelet2_map.osm  path_planning.sh  request_load_map.sh
planning/static_centerline_optimizer/src/: functions.cpp  main.cpp  optimization_node.cpp  static_centerline_optimizer.cpp  static_centerline_optimizer_node.cpp  utils.cpp
planning/static_centerline_optimizer/srv/: LoadMap.srv  PlanPath.srv  PlanRoute.srv
planning/static_path_smoother/: README.md  package.xml
planning/surround_obstacle_checker/: CMakeLists.txt  package.xml
sensing/gnss_poser/: package.xml
(+185 files in other folders)
