[tool.poetry]
name = "traffic_light_fine_detector_python"
version = "0.1.0"
description = "Autoware Machine Learning Detection 2D Toolbox"
authors = ["Mingyu Li <mingyu.li@tier4.jp>"]
license = "Apache License 2.0"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
nuscenes-devkit = "^1.1.9"
torch = "^1.13.1"
torchvision = "^0.14.1"
mmcv-full = [
    { url = "https://download.openmmlab.com/mmcv/dist/cu117/torch1.13.0/mmcv_full-1.7.0-cp38-cp38-manylinux1_x86_64.whl", python="~3.8" },
    { url = "https://download.openmmlab.com/mmcv/dist/cu117/torch1.13.0/mmcv_full-1.7.0-cp39-cp39-manylinux1_x86_64.whl", python="~3.9" },
    { url = "https://download.openmmlab.com/mmcv/dist/cu117/torch1.13.0/mmcv_full-1.7.0-cp310-cp310-manylinux1_x86_64.whl", python=">=3.10,<3.11" }
]
mmdet = "^2.26.0"
yapf = "^0.32.0"
mmdeploy = { git = "https://github.com/open-mmlab/mmdeploy", tag = "v0.10.0" }
multiprocess = "^0.70.14"
tensorboard = "^2.11.0"
mmcls = "^0.24.1"
flake8 = "^6.0.0"
openmim = "^0.3.6"
seaborn = "^0.12.2"
albumentations = "^1.3.0"
onnxruntime = "^1.14.0"
tensorrt = "^8.5.3.1"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
node="traffic_light_fine_detector_python.node:main"

[tool.colcon-poetry-ros.data-files]
#"share/ament_index/resource_index/packages" = ["resource/my_package"]
"share/my_package" = ["package.xml"]

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.4"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 88

[tool.isort]
line_length = 88
