<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>traffic_light_optical_flow_based_detector</name>
  <version>0.1.0</version>
  <description>The traffic_light_optical_flow_based_detector package</description>
  <maintainer email="mingyu.li@tier4.jp">Mingyu Li</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>

  <build_depend>autoware_cmake</build_depend>

  <depend>autoware_auto_perception_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tier4_autoware_utils</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>autoware_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
